--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "cors": "^2.8.5",
+    "express": "^4.16.3",
+    "firebase": "^8.3.0"
   }
 }
